# Hyperion-X-EMV

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  goal.txt  pyproject.toml
.devcontainer/: devcontainer.json
docs/: abi_conformance_statement.json  bitmap_catalogue.csv  certification_artifact_import_plan.json  certification_artifact_import_plan.md  certification_data_bundle.json  certification_data_bundle.md  certification_data_bundle_fingerprints.json  certification_data_bundle_lint.json  certification_data_bundle_lint.md  certification_data_bundle_trust_anchors.json  certification_data_bundle_workbench.html  certification_device_evidence_plan.json  certification_device_evidence_plan.md  certification_evidence_checklist.json  certification_evidence_checklist.md  certification_evidence_intake.json  certification_evidence_intake.md  certification_freeze_manifest.json  certification_freeze_manifest.md  certification_integration_report_plan.json  certification_integration_report_plan.md  certification_open_issues.md  certification_report_pack.json  certification_report_pack.md  certification_report_ui.html  certification_security_assessment_plan.json  certification_security_assessment_plan.md  coverage.md  deepseek_json_20260520_3ddf13.json  eng_notes.md  hyperion_emv_l2_kernel_spec_v3_1_corrected.md  lab_submission_manifest.md  oda_test_vectors-old.json  oda_test_vectors.json  open_source.md  open_source_emv.md  performance_profile.csv  prelab_apdu_trace_pack.jsonl  prelab_fuzz_seed_corpus.json  prelab_no_crash_smoke.json  (+29 more)
examples/: krn_abi_conformance_statement.rs  krn_basic_pos.rs  krn_basic_softpos.rs  krn_build_manifest.rs  krn_emv_decode.rs  (+26 more)
(+75 files in other folders)
