[package]
name = "hyperion-emv"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Nyimbi Odero"]
license = "MIT"

[lib]
name = "hyperion_emv"
crate-type = ["rlib", "staticlib", "cdylib"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "abort"

[dependencies]
ed25519-dalek = "2"
